# abstract-puzzle-generator

./: .gitignore  PieceKeyPiecePrinter.py  README.md  argv_helper.py  base_pice_generator.py  base_piece.py  base_piece_helper.py  coordinate.py  directions.py  edge.py  generate_functions.py  generate_spiral.py  last_frame_type.py  main.py  normal_vector.py  opposite_piece_keys.py  piece_generator.py  piece_holder.py  piece_key_constants.py  piece_key_fitter_pice_edge_printer.py  piece_key_fitter_piece.py  piece_key_parts.py  piece_key_piece.py  piece_key_piece_helper.py  piece_key_piece_print_positions.py  piece_key_piece_printer.py  piece_key_rotation_groups_generation.py  piece_keys.py  piece_keys_helper.py  print_positions.py  printer_helper.py  pyproject.toml  random_piece_generator.py  random_piece_key_fitter.py  random_piece_key_piece.py  rgb.py  ring.py  rotation_matrix.py  spiral__helper.py  spiral_helper.py  (+1 more)
abstract-puzzle-generator/: opposite_piece_keys.py  piece_generator.py  piece_key_rotation_groups_generation.py  printer_helper.py  rotation_matrix.py  spiral__helper.py  test_normal_vector.py
abstract_puzzle_generator/: argv_helper.py  base_piece_helper.py  coordinate.py  main.py  piece_keys.py  printer_helper.py
